@@ -28,6 +28,7 @@ $Source$
       - use DROP USER
       - use db_name LIKE REPLACE( mysql.db.Db, \_, _ )
     * libraries/grab_globals.lib.php: [XSS] clean $_SERVER variables
+    * left.php, libraries/common.lib.php: format rowcount in left frame
     
 2005-10-26 Marc Delisle  <lem9@users.sourceforge.net>
     * lang/french* updates
